--- a/app/src/main/res/layout/content_dogame.xml
+++ b/app/src/main/res/layout/content_dogame.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:layout_height="wrap_content"
     tools:context=".DogameActivity"
-    tools:showIn="@layout/app_bar_dogame">
+    tools:showIn="@layout/app_bar_dogame"
+    android:id="@+id/activity_dogame">
 
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
