--- a/app/src/main/res/menu/activity_dogame_drawer.xml
+++ b/app/src/main/res/menu/activity_dogame_drawer.xml
@@ -5,6 +5,9 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_home"
+            android:title="Início" />
+        <item
             android:id="@+id/nav_quiz"
             android:title="Responder quiz" />
         <item
