--- a/app/src/main/res/layout/app_bar_dogame.xml
+++ b/app/src/main/res/layout/app_bar_dogame.xml
@@ -7,9 +7,9 @@
     tools:context=".DogameActivity">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -25,7 +25,7 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <include layout="@layout/content_dogame"/>
+        <include layout="@layout/content_dogame" />
 
     </LinearLayout>
 
