--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="transparent">#00000000</color>
+    <color name="containerBackground">#00b9d5</color>
+    <color name="secondaryBackground">#4fc4d6</color>
+    <color name="textColor">#fffcfc</color>
 </resources>
