--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -15,6 +15,8 @@
         android:layout_marginBottom="8dp"
         android:text="@string/score"
         android:textColor="@color/textColor"
+        android:background="@color/secondaryBackground"
+        android:padding="@dimen/default_padding"
         app:layout_constraintBottom_toBottomOf="@+id/ibtClose"
         app:layout_constraintEnd_toStartOf="@+id/ibtClose"
         app:layout_constraintHorizontal_chainStyle="spread"
@@ -129,6 +131,8 @@
         android:layout_marginBottom="8dp"
         android:text="@string/time"
         android:textColor="@color/textColor"
+        android:background="@color/secondaryBackground"
+        android:padding="@dimen/default_padding"
         app:layout_constraintBottom_toBottomOf="@+id/ibtClose"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ibtClose"
