--- a/app/src/main/res/layout/nav_header_dogame.xml
+++ b/app/src/main/res/layout/nav_header_dogame.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
+    android:background="@color/secondaryBackground"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@drawable/dog_icon80" />
 
     <TextView
         android:layout_width="match_parent"
@@ -34,3 +34,4 @@
         android:text="@string/nav_header_subtitle" />
 
 </LinearLayout>
+    <!--android:background="@drawable/side_nav_bar"-->
