Colocar a função de ranking no git. Ainda falta resolver problemas com exibição e melhorias no ranking.

--- a/app/src/main/res/menu/ranking_navigation_menu.xml
+++ b/app/src/main/res/menu/ranking_navigation_menu.xml
@@ -5,6 +5,7 @@
 
     <item
         android:id="@+id/navigation_general"
+        android:checked="true"
         android:enabled="true"
         app:showAsAction="ifRoom"
         android:title="Geral"/>
