--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -10,9 +10,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin">
 
+    <!--style="?android:attr/progressBarStyleLarge"-->
     <ProgressBar
         android:id="@+id/pb_register"
-        style="?android:attr/progressBarStyleLarge"
         android:layout_centerInParent="true"
         android:indeterminate="true"
         android:layout_width="wrap_content"
