--- a/app/src/main/res/layout/nav_header_dogame.xml
+++ b/app/src/main/res/layout/nav_header_dogame.xml
@@ -21,17 +21,16 @@
         app:srcCompat="@drawable/dog_icon80" />
 
     <TextView
+        android:id="@+id/tv_user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="@string/nav_header_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_user_mail"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/nav_header_subtitle" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
     <!--android:background="@drawable/side_nav_bar"-->
