Correção da lógica para separar os tipos de ranking. Ainda com problemas para exibir, está populando corretamente mas não está exibindo o nome e pontuação.

--- a/app/src/main/res/layout/ranking_item.xml
+++ b/app/src/main/res/layout/ranking_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/cv_ranking_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="5dp">
+        app:cardCornerRadius="5dp" app:cardElevation="3dp">
 
         <LinearLayout
             android:layout_width="match_parent"
