--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/containerBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".quiz.QuizFragment">
@@ -12,10 +11,15 @@
         android:id="@+id/txtScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/secondaryBackground"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_rectangle"
+        android:drawablePadding="@dimen/default_padding"
+        android:drawableStart="@drawable/ic_star_yellow_24dp"
         android:padding="@dimen/default_padding"
         android:text="@string/score"
         android:textColor="@color/textColor"
+        android:textStyle="bold"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -39,6 +43,7 @@
         android:layout_marginTop="8dp"
         android:textColor="@color/textColor"
         android:text="@string/question"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgDog" />
@@ -50,7 +55,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
-        android:background="@color/secondaryBackground"
+        android:background="@drawable/rounded_rectangle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtQuestion">
@@ -60,6 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textStyle="bold"
             android:textColor="@color/textColor" />
 
         <RadioButton
@@ -67,6 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textStyle="bold"
             android:textColor="@color/textColor" />
 
         <RadioButton
@@ -74,6 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textStyle="bold"
             android:textColor="@color/textColor" />
 
         <RadioButton
@@ -81,6 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textStyle="bold"
             android:textColor="@color/textColor" />
 
         <RadioButton
@@ -88,6 +97,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textStyle="bold"
             android:textColor="@color/textColor" />
     </RadioGroup>
 
@@ -99,8 +109,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginTop="24dp"
         android:text="@string/next"
+        android:textStyle="bold"
         android:textColor="@color/textColor"
-        android:background="@color/secondaryBackground"
+        android:background="@drawable/rounded_rectangle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -115,8 +126,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:text="@string/skip"
+        android:textStyle="bold"
         android:textColor="@color/textColor"
-        android:background="@color/secondaryBackground"
+        android:background="@drawable/rounded_rectangle_secondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnNext"
         app:layout_constraintHorizontal_bias="0.5"
@@ -128,10 +140,15 @@
         android:id="@+id/txtTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/secondaryBackground"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_rectangle"
+        android:drawablePadding="@dimen/default_padding"
+        android:drawableStart="@drawable/ic_timer_red_24dp"
         android:padding="@dimen/default_padding"
         android:text="@string/time"
         android:textColor="@color/textColor"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/txtScore"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -140,8 +157,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/transparent"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/rounded_rectangle_secondary"
         android:src="@drawable/ic_close_black_24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
