--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -15,31 +15,30 @@
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0px"
-        android:layout_weight="1"
-        android:background="@android:color/white"/>
+        android:layout_weight="1"/>
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@color/containerBackground"
         app:tabGravity="fill"
         app:tabMode="fixed">
 
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Geral"/>
+            android:text="@string/general"/>
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mensal"/>
+            android:text="@string/monthly"/>
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Semanal"/>
+            android:text="@string/weekly"/>
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Diário"/>
+            android:text="@string/daily"/>
     </android.support.design.widget.TabLayout>
 </LinearLayout>
