--- a/app/src/main/res/layout/ranking_item.xml
+++ b/app/src/main/res/layout/ranking_item.xml
@@ -2,35 +2,51 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="@dimen/default_margin"
     android:gravity="center_horizontal">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv_ranking_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="5dp" app:cardElevation="3dp">
+        app:cardElevation="@dimen/default_elevation">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:background="@color/secondaryBackground"
+            android:padding="@dimen/default_padding"
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/tv_placing"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"/>
+                android:drawableEnd="@drawable/medal_30"
+                android:gravity="end"
+                android:textColor="@color/textColor"
+                android:textSize="@dimen/default_text_size" />
+
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"/>
+                android:drawablePadding="@dimen/default_padding"
+                android:drawableStart="@drawable/ic_face_black_24dp"
+                android:textColor="@color/textColor"
+                android:textSize="@dimen/default_text_size" />
+
             <TextView
                 android:id="@+id/tv_score"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"/>
+                android:drawablePadding="@dimen/default_padding"
+                android:drawableStart="@drawable/ic_star_yellow_24dp"
+                android:textColor="@color/textColor"
+                android:textSize="@dimen/default_text_size" />
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
