--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,7 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="default_padding">10dp</dimen>
+    <dimen name="default_margin">10dp</dimen>
     <dimen name="default_elevation">4dp</dimen>
+    <dimen name="default_text_size">16sp</dimen>
 </resources>
