--- a/app/src/main/res/layout/ranking_item.xml
+++ b/app/src/main/res/layout/ranking_item.xml
@@ -1,53 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/default_margin"
-    android:gravity="center_horizontal">
+    android:layout_marginBottom="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_height="@dimen/list_item_height">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cv_ranking_item"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/list_item_ranking_name"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:cardElevation="@dimen/default_elevation">
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="4dp"
+        android:layout_weight="1"
+        android:text="Ranking" android:textColor="@android:color/white" android:textSize="30sp"
+    />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/secondaryBackground"
-            android:padding="@dimen/default_padding"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tv_placing"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableEnd="@drawable/medal_30"
-                android:gravity="end"
-                android:textColor="@color/textColor"
-                android:textSize="@dimen/default_text_size" />
-
-            <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawablePadding="@dimen/default_padding"
-                android:drawableStart="@drawable/ic_face_black_24dp"
-                android:textColor="@color/textColor"
-                android:textSize="@dimen/default_text_size" />
-
-            <TextView
-                android:id="@+id/tv_score"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawablePadding="@dimen/default_padding"
-                android:drawableStart="@drawable/ic_star_yellow_24dp"
-                android:textColor="@color/textColor"
-                android:textSize="@dimen/default_text_size" />
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-</FrameLayout>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/list_item_ranking_arrow"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/ic_arrow_down"
+        android:layout_marginRight="@dimen/horizontal_margin"/>
+</LinearLayout>
