--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
     <dimen name="default_margin">10dp</dimen>
     <dimen name="default_elevation">4dp</dimen>
     <dimen name="default_text_size">16sp</dimen>
+    <dimen name="list_item_height">48dp</dimen>
+    <dimen name="horizontal_margin">16dp</dimen>
+    <dimen name="list_item_left_margin">72dp</dimen>
 </resources>
