Criação da funcionalidade de ver cachorros. Já está listando todas as raças e subraças. Falta exibir o cachorro ao clicar em uma das raças.

--- a/app/src/main/res/menu/activity_dogame_drawer.xml
+++ b/app/src/main/res/menu/activity_dogame_drawer.xml
@@ -14,7 +14,7 @@
             android:id="@+id/nav_ranking"
             android:title="@string/ranking" />
         <item
-            android:id="@+id/nav_list_dog"
+            android:id="@+id/nav_view_dog"
             android:title="@string/see_dogs" />
         <item
             android:id="@+id/nav_logout"
