Correção no scroll na tela de login e de cadastro

--- a/app/src/main/res/layout/fragment_view_dog.xml
+++ b/app/src/main/res/layout/fragment_view_dog.xml
@@ -60,4 +60,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spnBreeds" />
 
+    <FrameLayout
+        android:id="@+id/frmViewDogProgress"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/containerBackground"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ProgressBar
+            android:id="@+id/prgViewDog"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+    </FrameLayout>
+
 </android.support.constraint.ConstraintLayout>
