--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -34,16 +34,24 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgDogLogin">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:id="@+id/ll_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imgDogLogin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/default_margin"
+                android:src="@drawable/dog_icon80" />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -55,8 +63,8 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/e_mail"
                     android:inputType="textEmailAddress"
-                    android:textColor="@color/textColor"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:textColor="@color/textColor" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -70,10 +78,10 @@
                     android:hint="@string/password"
                     android:imeActionId="6"
                     android:imeActionLabel="Login"
-                    android:textColor="@color/textColor"
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:textColor="@color/textColor" />
             </android.support.design.widget.TextInputLayout>
 
             <Button
@@ -97,17 +105,5 @@
                 android:textStyle="bold" />
         </LinearLayout>
     </ScrollView>
-
-    <ImageView
-        android:id="@+id/imgDogLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:src="@drawable/dog_icon80"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
